Fix codesign: add --force for universal binary re-signing
lipo preserves signatures from arch binaries, so the universal
binary is already signed. Use --force to re-sign it properly.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,7 +162,7 @@ jobs:
           APPLE_CERTIFICATE_P12: ${{ secrets.APPLE_CERTIFICATE_P12 }}
         run: |
           codesign --sign "Developer ID Application: Joseph Lien (A93Q7MKECL)" \
-            --options runtime --timestamp \
+            --force --options runtime --timestamp \
             secrt-darwin-universal
           codesign --verify --verbose secrt-darwin-universal
 
