--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ is-terminal = "0.4"
 rpassword = "7"
 toml = "0.8"
 dirs = "6"
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 keyring = { version = "3", optional = true, features = ["apple-native", "linux-native", "windows-native"] }
 
 [features]
